added teamCreation page, sent team names to local storage, added radio buttons to gamePrep

--- a/gamePage.html
+++ b/gamePage.html
@@ -18,13 +18,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bowl Game</title>
 </head>
+
 <body>
     <header>
         <h1>The Bowl Game</h1>
     </header>
     <main>
-        <p>Users: <span id="userDisplay">test1</span></p>
-        <p>Items: <span id="itemDisplay">test2</span></p>
+        <p>Users: <span id="userDisplay"></span></p>
+        <p>Items: <span id="itemDisplay"></span></p>
     </main>
 </body>
 </html>
