--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>During your turn, try to describe the thing without using its name.</li>
             <li>Have fun!</li>
         </ol>
-        <button type="button"><a href="gamePrep.html">Start Prep</a></button>
+        <button type="button"><a href="teamCreation.html">Start Prep</a></button>
     </main>
 </body>
 </html>
