created team summary page with user and word counts

--- a/gamePrep.html
+++ b/gamePrep.html
@@ -55,7 +55,7 @@
             <li><input type="text" id="noun3" onfocus="this.value=''" value="Person, Place or Thing"></li>
         </ul>
         <button type="button"><a href="#" onclick="getData()">Create Another User</a></button>
-        <button type="button"><a href="gamePage.html" onclick="getData()">Done, Start Game</a></button>
+        <button type="button"><a href="teamSummary.html" onclick="getData()">Done</a></button>
     </main>
 </body>
 </html>
