--- a/teamCreation.html
+++ b/teamCreation.html
@@ -14,7 +14,7 @@
         console.log("Team 1 name: " + team1);
         console.log("Team 2 name: " + team2);
         if (team1 == team2) {
-            console.log("Team names must be unique. Try again.");
+            window.alert("Team names must be unique. Try again.");
             event.preventDefault();
         }
         else {
