--- a/gamePrep.html
+++ b/gamePrep.html
@@ -38,6 +38,7 @@
 <body>
     <header>
         <h1>The Bowl Game</h1>
+        <link href="styles/style.css" rel="stylesheet" type="text/css">
     </header>
     <main>
         <h2>Game Prep</h2>
