--- a/teamCreation.html
+++ b/teamCreation.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <script>
     //creates variables for team1 and team2, checks for duplication of names.
