--- a/gamePrep.html
+++ b/gamePrep.html
@@ -8,38 +8,40 @@
 </head>
 
 <script>
-    // changes Team 1 and Team 2 to user defined team names
+    // load in list of team objects from local storage
+    var teams = JSON.parse(localStorage.getItem("teams"));
+
     window.onload = function() {
+        // populate team selection buttons with actual team names
         var team1Label = document.getElementById("team1RadioLabel");
-        var team1 = JSON.parse(localStorage.getItem("team1"));
-        team1Label.innerHTML = team1.name;
+        team1Label.innerHTML = teams[0].name;
         var team2Label = document.getElementById("team2RadioLabel");
-        var team2 = JSON.parse(localStorage.getItem("team2"));
-        team2Label.innerHTML = team2.name;    
+        team2Label.innerHTML = teams[1].name;    
     }
-    const wordArray = [];
-    const userArray = [];
+
+    function addUserToTeam(newUser) {
+        // add new user to team depending on which button is selected
+        if (document.getElementById("team1Radio").checked == true) {
+            teams[0].members.push(newUser);
+            //localStorage.setItem("team1", JSON.stringify(team1));
+        }
+        else if (document.getElementById("team2Radio").checked == true) {
+            teams[1].members.push(newUser);
+            //localStorage.setItem("team2", JSON.stringify(team2));
+        }
+        localStorage.setItem("team2", JSON.stringify(teams));
+    }
+
     function createUser() {
-        let team1 = JSON.parse(localStorage.getItem("team1"));
-        let team2 = JSON.parse(localStorage.getItem("team2"));
+        // create user based on form input and add their words to the user object
         let user = document.getElementById("user_id").value;
         let item1 = document.getElementById("noun1").value;
         let item2 = document.getElementById("noun2").value;
         let item3 = document.getElementById("noun3").value;
         let newUser = {username:user, wordsList:[item1, item2, item3]};
-        localStorage.setItem(newUser.username, JSON.stringify(newUser)); //sessionStorage? no need to store at all?
-        if (document.getElementById("team1Radio").checked == true) {
-            team1.members.push(newUser);
-            localStorage.setItem("team1", JSON.stringify(team1));
-            
-        }
-        else {
-            team2.members.push(newUser);
-            localStorage.setItem("team2", JSON.stringify(team2));
-        }
+        addUserToTeam(newUser)
 
-
-        //clear text fields
+        // clear text fields
         document.getElementById("user_id").value = "";
         document.getElementById("noun1").value = "";
         document.getElementById("noun2").value = "";
