--- a/teamSummary.html
+++ b/teamSummary.html
@@ -1,9 +1,3 @@
-<script>
-    // load in list of team objects from local storage
-    var teams = JSON.parse(localStorage.getItem("teams"));
-
-</script>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +7,9 @@
     <title>The Bowl Game</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
+
+<script src="team_user_class.js"></script>
+<script src="teamSummaryController.js"></script>
 
 <body>
     <header>
