Fixed Class method preservation. Team Summary page started. Co: nickholt15

--- a/teamSummary.html
+++ b/teamSummary.html
@@ -17,8 +17,9 @@
     </header>
     <main>
         <h2>Team Summary</h2>
-        <p>User Count: <span id="userDisplay"></span></p>
-        <p>Words Submitted: <span id="itemDisplay"></span></p>
+        <p>Team Name: <span id="teamAName"></span></p>
+        <p>No. of Users: <span id="teamAUserDisplay"></span></p>
+        <p>Words Submitted: <span id="teamAWordCount"></span></p>
         <button type="button"><a href="gamePage.html">Start Game</a></button>
     </main>
 </body>
