--- a/teamCreation.html
+++ b/teamCreation.html
@@ -8,8 +8,13 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<script src="team_user_class.js"></script>
+<script src="teamUserClass.js"></script>
 <script src='teamCreationController.js'></script>
+<script>
+    window.onload = function() {
+    localStorage.clear();
+}
+</script>
 
 <body>
     <header>
