--- a/gamePage.html
+++ b/gamePage.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bowl Game</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ranchers&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -34,23 +36,30 @@
 </script>
 
 <body>
-    <header>
-        <h1>The Bowl Game</h1>
-    </header>
-    <main>
-        <div>
-            <h2><span>TeamAB</span>: <span>User</span>'s Turn</h2>
-            <h3>Word:</h3>
-            <p>Display word here.</p>
-        </div>
-        <div>
-            <h2>Time Remaining:</h2>
-            <p>1:00</p>
-        </div>
-        <div>
-            <button type="button"><a href="#" onclick="skipWord()">Skip Word</a></button>
-            <button type="button"><a href="#" onclick="correctWord()">Correct, Next Word</a></button>
-        </div>
-    </main>
+    <div class="wrapper">
+        <header>
+            <h1>The Bowl Game</h1>
+        </header>
+        <main>
+            <div>
+                <h2><span>TeamAB</span>: <span>User</span>'s Turn</h2>
+                <h3>Word:</h3>
+                <p>Display word here.</p>
+            </div>
+            <div>
+                <h2>Time Remaining:</h2>
+                <p>1:00</p>
+            </div>
+            <div>
+                <button type="button"><a href="#" onclick="skipWord()">Skip Word</a></button>
+                <button type="button"><a href="#" onclick="correctWord()">Correct, Next Word</a></button>
+            </div>
+        </main>
+
+        <footer>
+            <hr>
+            <p>The Holt Bros, 2021</p>
+        </footer>
+    </div>
 </body>
 </html>
