--- a/gamePrep.html
+++ b/gamePrep.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bowl Game</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ranchers&display=swap" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <script src="teamUserClass.js"></script>
@@ -24,30 +27,43 @@
 </script>
 
 <body>
-    <header>
-        <h1>The Bowl Game</h1>
-        <link href="styles/style.css" rel="stylesheet" type="text/css">
-    </header>
-    <main>
-        <h2>Game Prep</h2>
-        <h3>Create a Username:</h3>
-        <form>
-            <input type="text" id="user_id" placeholder="Username">
-            <input type="radio" id="team1Radio" name="teamSelect" value="team1">
-            <label for="team1Radio" id="team1RadioLabel">Team #1</label>
-            <input type="radio" id="team2Radio" name="teamSelect" value="team2">
-            <label for="team2Radio" id="team2RadioLabel">Team #2</label>
-            
-            <h3>Enter a few nouns:</h3>
-            <ul class="no-bullets" id="nounList">
-                <li><input type="text" class="nouns" placeholder="Person, Place or Thing" value=""></li>
-                <li><input type="text" class="nouns" placeholder="Person, Place or Thing" value=""></li>
-                <li><input type="text" class="nouns" placeholder="Person, Place or Thing" value=""></li>
-            </ul>
-            <button type="button"><a href="#" onclick="addTextField()">One More Noun...</a></button>
-        </form>
-        <button type="button"><a href="#" onclick="createUser()">Create Another User</a></button>
-        <button type="button"><a href="teamSummary.html" onclick="finalizeGamePrep()">Done</a></button>
-    </main>
+    <div class="wrapper">
+        <header>
+            <h1>The Bowl Game</h1>
+        </header>
+
+        <main class="gamePrepContainer">
+            <section>
+                <h2>Game Prep</h2>
+                <h3>Create a Username:</h3>
+                <form>
+                    <input type="text" id="user_id" placeholder="Username">
+                    <input type="radio" id="team1Radio" name="teamSelect" value="team1">
+                    <label for="team1Radio" id="team1RadioLabel">Team #1</label>
+                    <input type="radio" id="team2Radio" name="teamSelect" value="team2">
+                    <label for="team2Radio" id="team2RadioLabel">Team #2</label>
+                    <h3>Enter a few nouns:</h3>
+                    <ul class="no-bullets" id="nounList">
+                        <li><input type="text" class="nouns" placeholder="Person, Place or Thing" value=""></li>
+                        <li><input type="text" class="nouns" placeholder="Person, Place or Thing" value=""></li>
+                        <li><input type="text" class="nouns" placeholder="Person, Place or Thing" value=""></li>
+                    </ul>
+                    <button type="button"><a href="#" onclick="addTextField()">One More Noun...</a></button>
+                </form>
+                <div class="inlineButtons">
+                    <button type="button"><a href="#" onclick="createUser()">Create Another User</a></button>
+                    <button type="button"><a href="teamSummary.html" onclick="finalizeGamePrep()">Done</a></button>
+                </div>
+            </section>
+            <aside>
+                <img src="./assets/alphabet-cereal-bowl.png" alt="Cereal Bowl Full of Letters">
+            </aside>
+        </main>
+
+        <footer>
+            <hr>
+            <p>The Holt Bros, 2021</p>
+        </footer>
+    </div>
 </body>
 </html>
