--- a/index.html
+++ b/index.html
@@ -5,21 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bowl Game</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ranchers&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <h1>The Bowl Game</h1>
-    </header>
-    <main>
-        <h2>How To Play:</h2>
-        <ol>
-            <li>Assemble team of friends</li>
-            <li>Come up with 10 well-known nouns or Pronouns per person</li>
-            <li>During your turn, try to describe the thing without using its name.</li>
-            <li>Have fun!</li>
-        </ol>
-        <button type="button"><a href="teamCreation.html">Start Prep</a></button>
-    </main>
+    <div class="wrapper">
+        <header>
+            <h1>The Bowl Game</h1>
+        </header>
+
+        <main>
+            <div class="frontPageContainer">
+                <section>
+                    <h2>How To Play:</h2>
+                    <ol>
+                        <li>Assemble team of friends</li>
+                        <li>Come up with 10 well-known nouns or Pronouns per person</li>
+                        <li>During your turn, try to describe the thing without using its name.</li>
+                        <li>Have fun!</li>
+                    </ol>
+                    <button type="button"><a href="teamCreation.html">Start Prep</a></button>
+                </section>
+                <aside class= "frontPageImg">
+                    <img src="./assets/cartoon-salad-bowl.jpg" alt="Cartoon Salad Bowl">
+                </aside>
+            </div>
+        </main>
+        
+        <footer>
+            <hr>
+            <p>The Holt Bros, 2021</p>
+        </footer>
+    </div>
 </body>
 </html>
