--- a/teamCreation.html
+++ b/teamCreation.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bowl Game</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Ranchers&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -17,20 +19,33 @@
 </script>
 
 <body>
-    <header>
-        <h1>The Bowl Game</h1>
-    </header>
-    <main>
-        <h2>Team Creation</h2>
-        <p>The game will consist of two teams. Choose your team names:</p>
-        <form>
-            <ul class="no-bullets">
-                <li><input type="text" id="team1" placeholder="Team 1:"></li>
-                <li><input type="text" id="team2" placeholder="Team 2:"></li>
-            </ul>
-        </form>
+    <div class="wrapper">
+        <header>
+            <h1>The Bowl Game</h1>
+        </header>
         
-        <button type="button"><a href="gamePrep.html" onclick="createTeams()">Next: Game Prep</a></button>
-    </main>
+        <main class="teamCreationContainer">
+            <section>
+                <h2>Team Creation</h2>
+                <p>The game will consist of two teams. Choose your team names:</p>
+                <form>
+                    <ul class="no-bullets">
+                        <li><input type="text" id="team1" placeholder="Team 1:"></li>
+                        <li><input type="text" id="team2" placeholder="Team 2:"></li>
+                    </ul>
+                </form>
+                <button type="button"><a href="gamePrep.html" onclick="createTeams()">Next: Game Prep</a></button>
+            </section>
+            <aside>
+                <img src="./assets/fighting-vegetables.jpg" alt="Vegetables Fighting">
+            </aside>
+        
+
+        </main>
+        <footer>
+            <hr>
+            <p>The Holt Bros, 2021</p>
+        </footer>
+    </div>
 </body>
 </html>
