cleaned up Team Summary with CSS, Flexbox

--- a/teamSummary.html
+++ b/teamSummary.html
@@ -33,14 +33,20 @@
         <header>
             <h1>The Bowl Game</h1>
         </header>
-        <main>
+        <main class="teamSummaryContainer">
             <h2>Team Summary</h2>
-            <p>Team Name: <span id="teamAName"></span></p>
-            <p>No. of Users: <span id="teamAUserDisplay"></span></p>
-            <p>Words Submitted: <span id="teamAWordCount"></span></p>
-            <p>Team Name: <span id="teamBName"></span></p>
-            <p>No. of Users: <span id="teamBUserDisplay"></span></p>
-            <p>Words Submitted: <span id="teamBWordCount"></span></p>
+            <section>
+                <div>
+                    <p>Team Name: <span id="teamAName"></span></p>
+                    <p>No. of Users: <span id="teamAUserDisplay"></span></p>
+                    <p>Words Submitted: <span id="teamAWordCount"></span></p>
+                </div>
+                <div>
+                    <p>Team Name: <span id="teamBName"></span></p>
+                    <p>No. of Users: <span id="teamBUserDisplay"></span></p>
+                    <p>Words Submitted: <span id="teamBWordCount"></span></p>
+                </div>
+            </section>
             <button type="button"><a href="gamePage.html">Start Game</a></button>
         </main>
 
